teamcity-svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   namespace: ci-cd
#   name: teamcity
#   labels:
#     app: teamcity
#   annotations:
#     metallb.universe.tf/address-pool: production-public-ips #production-public-ips
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8111 
#       targetPort: 32118
---
# kind: Service
# apiVersion: v1
# metadata:
#   labels:
#     app: teamcity
#   name: teamcity
#   namespace: ci-cd
#   # annotations:
#   #   metallb.universe.tf/address-pool: default
# spec:
#   type: LoadBalancer 
#   ports:
#     - port: 8111
#       name: teamcity
#   selector:
#     app: teamcity

# apiVersion: v1
# kind: Service
# metadata:
#   name: teamcity
#   namespace: ci-cd
# spec:
#   selector:
#     app: teamcity
#   ports:
#     - protocol: TCP
#       port: 8111
#       targetPort: 8111
#   # clusterIP: 10.0.171.239
#   type: LoadBalancer
# status:
#   loadBalancer:
#     ingress:
#     - ip: 192.168.15.6

apiVersion: v1
kind: Service
metadata:
  name: teamcity
  namespace: ci-cd
spec:
  selector:
    app: teamcity
  ports:
    - protocol: TCP
      name: http-teamcity
      port: 8111
  # type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: teamcity-agent-lb
  namespace: ci-cd
  labels:  
    app: teamcity-build-agent
spec:
  selector:
    app: teamcity-build-agent
  ports:
    - protocol: TCP
      name: http-teamcity-docker
      port: 2376
      nodePort: 31500
  type: NodePort
# apiVersion: v1
# kind: Service
# metadata:
#   name: teamcity-service
#   namespace: ci-cd
# spec:
#   type: ExternalName
#   externalName: teamcity.local      # Resolvable DNS name pointing to external service  
#   selector:
#     app: teamcity
#   ports:
#     - protocol: TCP
#       port: 8111
#       targetPort: 8111
